<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:foregroundGravity="center_horizontal"
        android:src="@mipmap/ic_launcher"/>


    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/mainImage"
        android:layout_marginTop="24dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        />


    <TextView
        android:id="@+id/loginAcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewpager"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/oval_background_orange"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="12dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/layout_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginAcion"
        android:layout_marginTop="16dp"
        android:weightSum="4">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:layout_weight="2"
            android:background="#E6E6E6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/text_color_desc"
            android:textSize="18sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_weight="2"
            android:background="#E6E6E6"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_party_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_divider"
        android:layout_marginTop="16dp"
        android:weightSum="2"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:orientation="horizontal"
        >

        <FrameLayout
            android:id="@+id/FrameLayoutFAcebook"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/fb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/facebook_login"
                android:text="@string/facebook"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/FrameLayoutGoogle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" >

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/google"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/google_login"
                android:text="@string/google"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textStyle="bold" />
        </FrameLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/third_party_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/login_helper_text"
        android:textAllCaps="true"
        android:textColor="@color/text_color_desc"
        android:textSize="14sp"/>

</RelativeLayout>