<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />


    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:foregroundGravity="center_horizontal"
        android:src="@mipmap/ic_launcher" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nextAction"
        android:layout_below="@+id/mainImage">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/category_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/category"
                android:textAllCaps="true"
                android:textColor="@color/toolbar_heading"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/dropdown_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/category_heading"
                android:entries="@array/technique_array" />

            <LinearLayout
                android:id="@+id/layout_sale_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dropdown_category"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/avail_sale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/sale_avail"
                        android:textAllCaps="true"
                        android:textColor="@color/toolbar_heading"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switch_avail_sale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/avail_sale"
                        android:layout_marginTop="4dp"
                        android:checked="true"

                        android:padding="8dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/print_sale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/print_sale"
                        android:textAllCaps="true"
                        android:textColor="@color/toolbar_heading"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switch_print_sale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/print_sale"
                        android:layout_marginTop="4dp"
                        android:checked="true"
                        android:padding="8dp" />


                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_sale_details"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/sp_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/selling_price"
                        android:textAllCaps="true"
                        android:textColor="@color/toolbar_heading"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/width"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/sp_title"
                        android:inputType="number"
                        android:paddingBottom="18dp"
                        android:text="80"
                        android:textColor="@color/edittext_color"
                        android:textSize="18sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/prints_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/prints"
                        android:textAllCaps="true"
                        android:textColor="@color/toolbar_heading"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/prints_title"
                        android:inputType="number"
                        android:paddingBottom="18dp"
                        android:text="80"
                        android:textColor="@color/edittext_color"
                        android:textSize="18sp" />


                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_below="@+id/layout_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/publish_disclaimer"/>

        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/nextAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/oval_background_green"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:paddingTop="12dp"
        android:text="@string/publish"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>