<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:foregroundGravity="center_horizontal"
        android:src="@mipmap/ic_launcher"/>

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainImage"
        android:layout_marginTop="16dp"
       >

        <TextView
            android:id="@+id/textviewProfileSetup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_setup_heading"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.9dp"
            android:layout_below="@+id/textviewProfileSetup"
            android:layout_marginTop="12dp"
            android:layout_centerInParent="true"
            android:foregroundGravity="center"
            android:background="@color/orange"/>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_header"
        android:orientation="vertical"
        android:padding="64dp"
        android:weightSum="3">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/placeholder_text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:hint="@string/placeholder_text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:hint="@string/placeholder_text"/>

    </LinearLayout>

    <TextView
        android:id="@+id/loginAcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutDetails"
        android:layout_centerHorizontal="true"
        android:background="@drawable/oval_background_orange"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="12dp"
        android:text="@string/create_account"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"/>

</RelativeLayout>